@@ -1,3 +1,13 @@
+2009-02-05 15:33  sjardine
+
+	* modules/core/src/main/java/gnu/hylafax/ClientProtocol.java,
+	  modules/core/src/main/java/gnu/hylafax/HylaFAXClientProtocol.java:
+	  Added answer command. Thanks Jonas!
+
+2009-01-12 19:24  sjardine
+
+	* ChangeLog: Updated changelog.
+
 2008-11-13 15:33  sjardine
 
 	* modules/core/.settings/org.eclipse.jdt.core.prefs,
